<resources>
    <string name="app_name">Yo-Job!</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_a_job">Search a job</string>
    <string name="post_a_job">Post a job</string>
    <string name="birth">Date of Birth</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="salary_hour">Salary (£/hour)</string>
    <string name="location">Location</string>
    <string name="duration_hours">Duration (Hours)</string>
    <string name="jobs">Jobs</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="brief_description">Brief description</string>
    <string name="title">Title</string>
</resources>
