<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_jobs"
        android:icon="@drawable/ic_briefcase_black_24dp"
        android:title="@string/jobs" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/post" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/profile" />

</menu>
