<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.JobsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/app_name"
        android:textSize="80sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/search_a_job"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:onClick="search"
        android:padding="8dp"
        android:text="@string/search_a_job"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/post_a_job"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:onClick="post"
        android:padding="8dp"
        android:text="@string/post_a_job"
        android:textSize="24sp"
        android:layout_gravity="center"/>
</LinearLayout>