<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/login"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/log_in"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/signup"
        android:layout_width="192dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="420dp" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:text="@string/app_name"
        android:textSize="80sp"
        app:fontFamily="@font/kite_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>