<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Activities.SearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="80sp" />

            <CalendarView
                android:id="@+id/searchCalendar"
                android:layout_width="262dp"
                android:layout_height="251dp"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/titleTextbox"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_text_box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/titleInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/salaryTextbox"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_text_box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/salaryInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/salary_hour"
                    android:inputType="numberDecimal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/search"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:onClick="search"
                android:padding="8dp"
                android:text="@string/search"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>